--- a/index.html
+++ b/index.html
@@ -36,4 +36,5 @@
   <h1>🎂 BirthdayCat ($BCAT)</h1>
 </body>
 </html>
+<p style="margin-top: 20px; font-size: 1.5rem; opacity: 0.7;">Coming Soon...</p>
 
