--- a/index.html
+++ b/index.html
@@ -37,4 +37,15 @@
 </body>
 </html>
 <p style="margin-top: 20px; font-size: 1.5rem; opacity: 0.7;">Coming Soon...</p>
+<div style="margin-top: 40px;">
+  <h2>About $BCAT</h2>
+  <p style="max-width: 600px; margin: 0 auto; font-size: 1rem; opacity: 0.8;">
+    $BCAT is a meme coin project born from the soul of the internet — a celebration of every cat’s birthday, every day. It’s fun, it’s weird, and it’s community-driven. No roadmap, no promises. Just pure Miuvv energy.
+  </p>
+</div>
+<div style="margin-top: 30px;">
+  <a href="https://x.com/yourpage" target="_blank" style="margin: 10px; text-decoration: none; color: white; border: 1px solid white; padding: 10px 20px; border-radius: 8px;">X (Twitter)</a>
+  <a href="https://t.me/yourchannel" target="_blank" style="margin: 10px; text-decoration: none; color: white; border: 1px solid white; padding: 10px 20px; border-radius: 8px;">Telegram</a>
+</div>
+<img src="catlogo.png" alt="BCAT logo" style="width: 120px; margin-bottom: 20px;">
 
