--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BirthdayCat - $BCAT</title>
   <style>
-    body {
+    body {<img src="catlogo.png" alt="BCAT logo" style="width: 120px; margin-bottom: 20px;">
       margin: 0;
       padding: 0;
       font-family: 'Arial', sans-serif;
