--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       height: 100vh;
       text-align: center;
     }
-    h1 {
+    h1 {<div style="text-align: center; margin-top: 40px;">
+  <img src="catlogo.png" alt="BCAT logo" style="width: 200px; margin-bottom: 20px;">
+  <h1>🎂 BirthdayCat ($BCAT)</h1>
+</div>
+
       font-size: 3rem;
       margin-bottom: 10px;
     }
@@ -47,5 +51,9 @@
   <a href="https://x.com/yourpage" target="_blank" style="margin: 10px; text-decoration: none; color: white; border: 1px solid white; padding: 10px 20px; border-radius: 8px;">X (Twitter)</a>
   <a href="https://t.me/yourchannel" target="_blank" style="margin: 10px; text-decoration: none; color: white; border: 1px solid white; padding: 10px 20px; border-radius: 8px;">Telegram</a>
 </div>
-<img src="catlogo.png" alt="BCAT logo" style="width: 120px; margin-bottom: 20px;">
+<div style="text-align: center; margin-top: 40px;">
+  <img src="catlogo.png" alt="BCAT logo" style="width: 200px; margin-bottom: 20px;">
+  <h1>🎂 BirthdayCat ($BCAT)</h1>
+</div>
+
 
