--- a/index.html
+++ b/index.html
@@ -55,5 +55,106 @@
   <img src="catlogo.png" alt="BCAT logo" style="width: 200px; margin-bottom: 20px;">
   <h1>🎂 BirthdayCat ($BCAT)</h1>
 </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>BirthdayCat - $BCAT</title>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Orbitron', sans-serif;
+      background: radial-gradient(circle at center, #3a0ca3, #1e1e2f, #0e0e1a);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: start;
+      min-height: 100vh;
+      text-align: center;
+      padding-top: 60px;
+    }
+
+    h1 {
+      font-size: 3.5rem;
+      margin-bottom: 10px;
+      text-shadow: 0 0 15px #ff00ff;
+    }
+
+    h2 {
+      margin-top: 40px;
+      text-shadow: 0 0 10px #a29bfe;
+    }
+
+    p {
+      font-size: 1.2rem;
+      opacity: 0.85;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    .miuvv {
+      font-size: 3rem;
+      margin-top: 40px;
+      color: #fcd5ce;
+      text-shadow: 0 0 15px #ff99c8;
+    }
+
+    img {
+      width: 200px;
+      margin-bottom: 20px;
+    }
+
+    .links {
+      margin-top: 30px;
+    }
+
+    .links a {
+      margin: 10px;
+      text-decoration: none;
+      color: white;
+      border: 2px solid white;
+      padding: 10px 20px;
+      border-radius: 12px;
+      transition: 0.3s ease;
+    }
+
+    .links a:hover {
+      background-color: white;
+      color: #0e0e1a;
+      box-shadow: 0 0 15px white;
+    }
+  </style>
+</head>
+<body>
+  <!-- Logo -->
+  <img src="catlogo.png" alt="BCAT logo" />
+
+  <!-- Başlık -->
+  <h1>🎂 BirthdayCat ($BCAT)</h1>
+  <p style="margin-top: 10px;">Coming Soon...</p>
+
+  <!-- Hakkında -->
+  <div>
+    <h2>About $BCAT</h2>
+    <p>
+      $BCAT is a meme coin project born from the soul of the internet — a celebration of every cat’s birthday, every day. It’s fun, it’s weird, and it’s community-driven. No roadmap, no promises. Just pure Miuvv energy.
+    </p>
+  </div>
+
+  <!-- Link Butonları -->
+  <div class="links">
+    <a href="https://x.com/yourpage" target="_blank">X (Twitter)</a>
+    <a href="https://t.me/yourchannel" target="_blank">Telegram</a>
+  </div>
+
+  <!-- Miuvv Tag -->
+  <div class="miuvv">#Miuvv</div>
+</body>
+</html>
 
 
