--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
   </style>
 </head>
-<body>
+<body><img src="spacecat.png" alt="BCAT Space Cat" style="width: 300px; margin-bottom: 30px; border-radius: 20px; box-shadow: 0 0 20px #ff99ff;">
   <h1>🎂 BirthdayCat ($BCAT)</h1>
 </body>
 </html>
