--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<body><!-- Hero / Banner Section -->
+<section style="width: 100%; height: 100vh; background: url('bcat-hero.png') repeat center center; background-size: 300px auto; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
+  <h1 style="color: white; font-size: 3rem; text-shadow: 0 0 15px #ff00ff; background: rgba(0,0,0,0.5); padding: 10px 20px; border-radius: 10px;">
+    Welcome to the Miuvvverse
+  </h1>
+  <p style="color: #ccc; font-size: 1.2rem; background: rgba(0,0,0,0.4); padding: 6px 12px; border-radius: 8px; margin-top: 10px;">
+    Scroll to enter the chaos 🎂🐱🚀
+  </p>
+</section>
 
