--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     Welcome to the Miuvvverse
   </h1>
   <p style="color: #ccc; font-size: 1.2rem; background: rgba(0,0,0,0.4); padding: 6px 12px; border-radius: 8px; margin-top: 10px;">
-    Scroll to enter the chaos 🎂🐱🚀
   </p>
+</section>
+<body><!-- Hero Section with GIF + Cat Overlay -->
+<section style="position: relative; width: 100%; height: 100vh; overflow: hidden;">
+  <!-- Background GIF -->
+  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://media.giphy.com/media/l0HlRmzId4vWJxVB2/giphy.gif') center center / cover no-repeat; z-index: 1;"></div>
+
+  <!-- Cat Overlay (tekrar eden) -->
+  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('bcat-hero.png2.png') repeat; background-size: 300px auto; opacity: 1; z-index: 2;"></div>
+  <!-- Text on Top -->
+  <div style="position: relative; z-index: 3; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;">
+    <h1 style="color: white; font-size: 3rem; text-shadow: 0 0 15px #ff00ff; background: rgba(0,0,0,0.4); padding: 10px 20px; border-radius: 10px;">
+    </h1>
+    <p style="color: #ccc; font-size: 1.2rem; background: rgba(0,0,0,0.3); padding: 6px 12px; border-radius: 8px; margin-top: 10px;">
+      Scroll to enter the chaos 🎂🐱🚀
+    </p>
+  </div>
 </section>
 
