--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
   body {
     margin: 0;
     height: 100vh;
-    background: linear-gradient(-45deg, #ff0000, #ff9900, #33cc33, #00ccff, #9933ff);
-    background-size: 500% 500%;
-    animation: gradientMove 12s ease infinite;
+    background: linear-gradient(-45deg, #6a00f4, #ff6ec7, #ffcc00, #0fffc1);
+    background-size: 400% 400%;
+    animation: gradientMove 14s ease infinite;
   }
 
   @keyframes gradientMove {
-    0% { background-position: 0% 0%; }
-    50% { background-position: 100% 100%; }
-    100% { background-position: 0% 0%; }
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
   }
 </style>
