--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
       100% { background-position: 0% 50%; }
     }
   </style>
-</head>
-<body>
+</head><link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
+<body><h1 style="
+  font-family: 'Abril Fatface', cursive;
+  font-size: 4rem;
+  color: white;
+  text-align: center;
+  margin: 0;
+  padding-top: 40px;
+  text-shadow: 0 0 10px rgba(0,0,0,0.3);
+">
+  Welcome BirthdayCat
+</h1>
+
 </body>
 </html>
