--- a/index.html
+++ b/index.html
@@ -19,19 +19,38 @@
       100% { background-position: 0% 50%; }
     }
   </style>
-</head><link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+  <!-- Head içine font + animasyon için keyframe -->
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+<style>
+  @keyframes colorShift {
+    0% { color: #ff9a9e; }
+    25% { color: #fad0c4; }
+    50% { color: #a1c4fd; }
+    75% { color: #c2e9fb; }
+    100% { color: #ff9a9e; }
+  }
+</style>
 
-<body><h1 style="
-  font-family: 'Abril Fatface', cursive;
-  font-size: 4rem;
-  color: white;
-  text-align: center;
-  margin: 0;
+<!-- Body içine yerleştir -->
+<div style="
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-top: 40px;
-  text-shadow: 0 0 10px rgba(0,0,0,0.3);
 ">
-  Welcome BirthdayCat
-</h1>
-
-</body>
-</html>
+  <div style="
+    background: rgba(0,0,0,0.3);
+    border-radius: 30px;
+    padding: 20px 40px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+  ">
+    <h1 style="
+      font-family: 'Abril Fatface', cursive;
+      font-size: 3.5rem;
+      margin: 0;
+      animation: colorShift 8s ease-in-out infinite;
+    ">
+      Welcome BirthdayCat
+    </h1>
+  </div>
+</div>
