--- a/index.html
+++ b/index.html
@@ -54,3 +54,19 @@
     </h1>
   </div>
 </div>
+<body><!-- GIF + Ortadaki Video Alanı -->
+<section style="display: flex; justify-content: space-between; align-items: center; height: 100vh; background-color: transparent; padding: 40px;">
+  
+  <!-- Sol GIF -->
+  <img src="gozluk.gif" alt="Cool Cat Left" style="height: 400px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+
+  <!-- Orta Video Alanı -->
+  <div style="width: 40%; height: 400px; display: flex; justify-content: center; align-items: center; background: rgba(0,0,0,0.3); border-radius: 20px;">
+    <!-- Placeholder video -->
+    <p style="color: white; font-family: sans-serif;">[ Video Placeholder ]</p>
+  </div>
+
+  <!-- Sağ GIF -->
+  <img src="gozluk.gif" alt="Cool Cat Right" style="height: 400px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+
+</section>
