--- a/index.html
+++ b/index.html
@@ -70,3 +70,11 @@
   <img src="gozluk.gif" alt="Cool Cat Right" style="height: 400px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
 
 </section>
+<!-- Üst GIF Bandı -->
+<div style="display: flex; justify-content: space-between; align-items: center; padding: 20px 60px;">
+  <img src="gozluk.gif" alt="Cat Left" style="height: 120px; border-radius: 12px; box-shadow: 0 0 12px rgba(0,0,0,0.3);" />
+  
+  <!-- Boşluk başlık için bırakılıyor -->
+
+  <img src="gozluk.gif" alt="Cat Right" style="height: 120px; border-radius: 12px; box-shadow: 0 0 12px rgba(0,0,0,0.3);" />
+</div>
