--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
     </h1>
   </div>
 </div>
-<body><!-- GIF + Ortadaki Video Alanı (Üst Üste 2 GIF) -->
-<section style="display: flex; justify-content: center; align-items: center; gap: 60px; height: 100vh; padding: 40px;">
+<body><!-- Gözlük GIF 2x2 Bloklu Yerleşim -->
+<section style="display: flex; justify-content: center; align-items: center; gap: 80px; height: 100vh; padding: 40px;">
 
-  <!-- Sol GIF Column -->
-  <div style="display: flex; flex-direction: column; gap: 20px;">
-    <img src="gozluk.gif" alt="Cat Top Left" style="height: 160px; border-radius: 16px; box-shadow: 0 0 16px rgba(0,0,0,0.4);" />
-    <img src="gozluk.gif" alt="Cat Bottom Left" style="height: 160px; border-radius: 16px; box-shadow: 0 0 16px rgba(0,0,0,0.4);" />
+  <!-- Sol Kolon -->
+  <div style="display: flex; flex-direction: column; gap: 30px;">
+    <img src="gozluk.gif" alt="Cat Top Left" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <img src="gozluk.gif" alt="Cat Bottom Left" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
   </div>
 
   <!-- Orta Video Alanı -->
-  <div style="width: 40%; height: 360px; display: flex; justify-content: center; align-items: center; background: rgba(0,0,0,0.3); border-radius: 20px;">
+  <div style="width: 40%; height: 420px; display: flex; justify-content: center; align-items: center; background: rgba(0,0,0,0.3); border-radius: 20px;">
     <p style="color: white; font-family: sans-serif;">[ Video Placeholder ]</p>
   </div>
 
-  <!-- Sağ GIF Column -->
-  <div style="display: flex; flex-direction: column; gap: 20px;">
-    <img src="gozluk.gif" alt="Cat Top Right" style="height: 160px; border-radius: 16px; box-shadow: 0 0 16px rgba(0,0,0,0.4);" />
-    <img src="gozluk.gif" alt="Cat Bottom Right" style="height: 160px; border-radius: 16px; box-shadow: 0 0 16px rgba(0,0,0,0.4);" />
+  <!-- Sağ Kolon -->
+  <div style="display: flex; flex-direction: column; gap: 30px;">
+    <img src="gozluk.gif" alt="Cat Top Right" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <img src="gozluk.gif" alt="Cat Bottom Right" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
   </div>
 
 </section>
