--- a/index.html
+++ b/index.html
@@ -54,24 +54,23 @@
     </h1>
   </div>
 </div>
-<body><!-- Gözlük GIF 2x2 Bloklu Yerleşim -->
-<section style="display: flex; justify-content: center; align-items: center; gap: 80px; height: 100vh; padding: 40px;">
+<body><section style="display: grid; grid-template-columns: 1fr 2fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
 
-  <!-- Sol Kolon -->
-  <div style="display: flex; flex-direction: column; gap: 30px;">
-    <img src="gozluk.gif" alt="Cat Top Left" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-    <img src="gozluk.gif" alt="Cat Bottom Left" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+  <!-- Sol Taraf (2 GIF Üst Üste) -->
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 30px;">
+    <img src="gozluk.gif" alt="Top Left Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <img src="gozluk.gif" alt="Bottom Left Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
   </div>
 
   <!-- Orta Video Alanı -->
-  <div style="width: 40%; height: 420px; display: flex; justify-content: center; align-items: center; background: rgba(0,0,0,0.3); border-radius: 20px;">
-    <p style="color: white; font-family: sans-serif;">[ Video Placeholder ]</p>
+  <div style="height: 520px; background: rgba(0,0,0,0.3); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
+    <p style="color: white; font-size: 1.2rem;">[ Video Placeholder ]</p>
   </div>
 
-  <!-- Sağ Kolon -->
-  <div style="display: flex; flex-direction: column; gap: 30px;">
-    <img src="gozluk.gif" alt="Cat Top Right" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-    <img src="gozluk.gif" alt="Cat Bottom Right" style="height: 200px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+  <!-- Sağ Taraf (2 GIF Üst Üste) -->
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 30px;">
+    <img src="gozluk.gif" alt="Top Right Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <img src="gozluk.gif" alt="Bottom Right Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
   </div>
 
 </section>
