--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
 </div>
 <body><section style="display: grid; grid-template-columns: 1fr 2fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
 
-  <!-- Sol Taraf (2 GIF Üst Üste) -->
-  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 30px;">
-    <img src="gozluk.gif" alt="Top Left Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-    <img src="gozluk.gif" alt="Bottom Left Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+  <!-- Sol 2 GIF -->
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
+    <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
   </div>
 
-  <!-- Orta Video Alanı -->
-  <div style="height: 520px; background: rgba(0,0,0,0.3); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
-    <p style="color: white; font-size: 1.2rem;">[ Video Placeholder ]</p>
+  <!-- Orta video alanı -->
+  <div style="height: 840px; background: rgba(0,0,0,0.3); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
+    <p style="color: white; font-size: 1.4rem;">[ Video Placeholder ]</p>
   </div>
 
-  <!-- Sağ Taraf (2 GIF Üst Üste) -->
-  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 30px;">
-    <img src="gozluk.gif" alt="Top Right Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-    <img src="gozluk.gif" alt="Bottom Right Cat" style="height: 250px; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+  <!-- Sağ 2 GIF -->
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
+    <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
   </div>
 
 </section>
