--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </h1>
   </div>
 </div>
-<body><section style="display: grid; grid-template-columns: 1fr 2fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
+<body><!-- Gözlük GIF + Küçültülmüş Video Alanı -->
+<section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
 
   <!-- Sol 2 GIF -->
   <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
@@ -62,9 +63,9 @@
     <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
   </div>
 
-  <!-- Orta video alanı -->
-  <div style="height: 840px; background: rgba(0,0,0,0.3); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
-    <p style="color: white; font-size: 1.4rem;">[ Video Placeholder ]</p>
+  <!-- Orta Video Alanı (daha küçük) -->
+  <div style="height: 500px; background: rgba(0,0,0,0.3); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
+    <p style="color: white; font-size: 1.2rem;">[ Video Placeholder ]</p>
   </div>
 
   <!-- Sağ 2 GIF -->
