--- a/index.html
+++ b/index.html
@@ -67,15 +67,10 @@
   <div style="height: 500px; background: rgba(0,0,0,0.3); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
     <p style="color: white; font-size: 1.2rem;">[ <!-- Video Alanı (ortadaki kutunun içine yerleştir) -->
 <div style="width: 100%; height: 100%; border-radius: 20px; overflow: hidden;">
-  <iframe 
-    width="100%" 
-    height="100%" 
-    src="https://www.youtube.com/embed/-ZgCx60QoHI?autoplay=1&loop=1&playlist=-ZgCx60QoHI&mute=1&controls=0" 
-    title="BirthdayCat Intro" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen>
-  </iframe>
+  <video autoplay loop muted playsinline style="width: 100%; height: 100%; border-radius: 20px; object-fit: cover;">
+  <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 </div>
  ]</p>
   </div>
