--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   </div>
 
   <!-- Orta Video Alanı (daha küçük) -->
-  <div style="height: 500px; background: rgba(0,0,0,0.3); border-radius: 20px; display: flex; justify-content: center; align-items: center;">
-    <p style="color: white; font-size: 1.2rem;">[ <!-- Video Alanı (ortadaki kutunun içine yerleştir) -->
-<div style="width: 100%; height: 100%; border-radius: 20px; overflow: hidden;">
+  <div style="width: 100%; height: 100%; position: relative; overflow: hidden; border-radius: 20px;">
+  <!-- video burada -->
+</div>
   <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
   <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
   Your browser does not support the video tag.
