--- a/index.html
+++ b/index.html
@@ -64,9 +64,22 @@
   </div>
 
   <!-- Orta Video Alanı (daha küçük) -->
-  <div style="width: 100%; height: 100%; position: relative; overflow: hidden; border-radius: 20px;">
-  <!-- video burada -->
+  <!-- Video Kutusu (taşma yok, tam oturur) -->
+<div style="width: 100%; height: 100%; border-radius: 20px; overflow: hidden; position: relative;">
+  <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
+    <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 </div>
+
+<!-- 3x Hız -->
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const vid = document.getElementById("bcatVideo");
+    vid.playbackRate = 3.0;
+  });
+</script>
+
   <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
   <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
   Your browser does not support the video tag.
