--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
 
-    <!-- Orta Video Alanı (düzenlenmiş) -->
-    <div style="width: 100%; height: 85%; border-radius: 20px; overflow: hidden; position: relative;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 85%; object-fit: cover; border-radius: 20px;">
-        <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
+   <!-- Orta Video Alanı (ortalanmış) -->
+<div style="width: 100%; height: 85%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
+  <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
+    <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 
     <!-- Sağ 2 GIF -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
