--- a/index.html
+++ b/index.html
@@ -70,8 +70,17 @@
     <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-</div>
-
+</div><!-- NYAN CAT - VIDEO KUTUSU ÜZERİNE ORTALI -->
+<img id="nyanCat" src="giphy.gif" alt="Nyan Cat" style="
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 160px;
+  pointer-events: auto;
+  z-index: 10;
+  transition: transform 1s ease-in-out;
+">
     <!-- Sağ 2 GIF -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
       <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
