--- a/index.html
+++ b/index.html
@@ -70,16 +70,17 @@
     <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-</div><!-- NYAN CAT - VIDEO KUTUSU ÜZERİNE ORTALI -->
+</div><!-- NYAN CAT - VIDEO KUTUSU ÜZERİNDE, ÜST ORTADA -->
 <img id="nyanCat" src="giphy.gif" alt="Nyan Cat" style="
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   width: 160px;
   pointer-events: auto;
   z-index: 10;
   transition: transform 1s ease-in-out;
+">
 "><script>
   const nyan = document.getElementById("nyanCat");
 
