--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
+      overflow-x: hidden;
     }
 
     @keyframes gradientMove {
@@ -22,85 +23,90 @@
     }
 
     @keyframes colorShift {
-      0% { color: #ff9a9e; }
-      25% { color: #fad0c4; }
-      50% { color: #a1c4fd; }
-      75% { color: #c2e9fb; }
-      100% { color: #ff9a9e; }
+      0% { color: red; }
+      20% { color: orange; }
+      40% { color: yellow; }
+      60% { color: green; }
+      80% { color: blue; }
+      100% { color: violet; }
     }
 
     #topTitle {
       font-family: 'Abril Fatface', cursive;
       font-size: 3.5rem;
       margin: 0;
-      animation: colorShift 8s ease-in-out infinite;
+      animation: colorShift 5s infinite;
       text-align: center;
     }
 
     #nyanZone {
-      position: absolute;
-      top: 12%;
-      left: 50%;
-      transform: translateX(-50%);
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       gap: 20px;
+      margin-top: 40px;
       z-index: 20;
     }
 
     #nyanCat {
       width: 160px;
-      pointer-events: auto;
-      transition: transform 1s ease-in-out;
+      transition: transform 2s ease-in-out;
     }
 
     #dontPress {
       padding: 14px 30px;
-      font-size: 20px;
+      font-size: 22px;
       font-family: 'Abril Fatface', cursive;
-      background-color: black;
-      border: 2px solid white;
-      border-radius: 12px;
+      background: linear-gradient(90deg, #ff4d4d, #ffb347, #47ffb3, #4d94ff, #b347ff);
+      background-size: 300% 300%;
+      animation: gradientMove 5s ease infinite;
+      color: white;
+      border: none;
+      border-radius: 40px;
       cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      box-shadow: 0 0 15px rgba(255,255,255,0.3);
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
     }
 
     #dontPress span {
-      background: linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      font-weight: bold;
-      text-shadow: 0 0 2px white;
+      animation: colorShift 2s infinite;
+    }
+
+    #gameContainer {
+      display: none;
+      width: 100%;
+      height: 400px;
+      margin-top: 60px;
+      background: url('https://i.imgur.com/lo8vZ2T.png');
+      background-size: cover;
+      position: relative;
+      overflow: hidden;
+    }
+
+    #flappyCanvas {
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
-
 <body>
-  <!-- ÜST BAŞLIK -->
   <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
     <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
       <h1 id="topTitle">Welcome BirthdayCat</h1>
     </div>
   </div>
 
-  <!-- NYAN + BUTON -->
   <div id="nyanZone">
     <img id="nyanCat" src="giphy.gif" alt="Nyan Cat">
     <button id="dontPress"><span>DON'T PRESS 😼</span></button>
   </div>
 
-  <!-- ANA GÖRSEL ALAN -->
   <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
-    
-    <!-- Sol 2 GIF -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
       <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
       <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
 
-    <!-- ORTA VİDEO ALANI -->
     <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
       <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
         <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
@@ -108,31 +114,33 @@
       </video>
     </div>
 
-    <!-- Sağ 2 GIF -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
       <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
       <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
-
   </section>
 
-  <!-- JS KODLARI -->
+  <div id="gameContainer">
+    <canvas id="flappyCanvas"></canvas>
+  </div>
+
+  <audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c5762a6ffb.mp3" loop></audio>
+
   <script>
-    // Video hızını 3x yap
     document.addEventListener("DOMContentLoaded", function () {
       const vid = document.getElementById("bcatVideo");
       vid.playbackRate = 3.0;
     });
 
-    // NYAN CAT animasyonu
     const nyan = document.getElementById("nyanCat");
     const btn = document.getElementById("dontPress");
+    const gameContainer = document.getElementById("gameContainer");
+    const bgMusic = document.getElementById("bgMusic");
 
     btn.addEventListener("click", () => {
-      nyan.style.transform = "translateX(300px) scale(1.2)";
-      setTimeout(() => {
-        nyan.style.transform = "translateX(-50%)";
-      }, 1200);
+      nyan.style.transform = "translateY(400px) scale(1.2)";
+      gameContainer.style.display = "block";
+      bgMusic.play();
     });
   </script>
 </body>
