--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BirthdayCat</title>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <style>
@@ -144,10 +144,10 @@
   </section>
 
   <div id="gameContainer">
-    <canvas id="flappyCanvas"></canvas>
+    <canvas id="flappyCanvas" width="800" height="500"></canvas>
   </div>
 
-  <audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c5762a6ffb.mp3" loop></audio>
+  <audio id="bgMusic" preload="auto" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c5762a6ffb.mp3" loop></audio>
 
   <script>
     const nyan = document.getElementById("nyanCat");
@@ -158,7 +158,13 @@
     const ctx = canvas.getContext("2d");
     let isGameStarted = false;
 
-    btn.addEventListener("click", () => {
+    btn.addEventListener("click", async () => {
+      try {
+        await bgMusic.play();
+      } catch (e) {
+        console.log("Audio play prevented by browser");
+      }
+
       let position = 0;
       const interval = setInterval(() => {
         position += 5;
@@ -166,7 +172,6 @@
         if (position >= 500) {
           clearInterval(interval);
           gameContainer.style.display = "block";
-          bgMusic.play();
           startGame();
         }
       }, 20);
