--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
       top: 20px;
       right: 30px;
       display: flex;
-      gap: 22px;
+      gap: 24px;
       z-index: 999;
     }
 
     #iconBar a img {
-      width: 40px;
-      height: 40px;
+      width: 42px;
+      height: 42px;
       transition: transform 0.3s ease, filter 0.3s ease;
-      border-radius: 8px;
     }
 
     #iconBar a:hover img {
@@ -75,16 +74,16 @@
 
 <body>
 
-  <!-- İKONLAR (SAĞ ÜST) -->
+  <!-- İKON BAR -->
   <div id="iconBar">
     <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
     </a>
     <a href="https://x.com/YOUR_X" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X">
     </a>
     <a href="https://dexscreener.com" target="_blank">
-      <img src="https://raw.githubusercontent.com/dexscreener/dexscreener-assets/master/dexscreener-favicon.png" alt="Dexscreener">
+      <img src="https://assets.dexscreener.com/icons/apple-touch-icon.png" alt="Dexscreener">
     </a>
     <a href="https://coingecko.com" target="_blank">
       <img src="https://www.coingecko.com/assets/coingecko-logo-6b4dfec63db6dca76831b6b78f530dabd0b65d7feba09a053c87a7ebc9441b5c.png" alt="CoinGecko">
@@ -103,16 +102,16 @@
     <img id="nyanCat" src="giphy.gif" alt="Nyan Cat">
   </div>
 
-  <!-- ANA BÖLÜM -->
+  <!-- ANA GÖRSEL ALAN -->
   <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
     
-    <!-- Sol GIF -->
+    <!-- Sol 2 GIF -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
       <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
       <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
 
-    <!-- VİDEO -->
+    <!-- VİDEO ORTA -->
     <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
       <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
         <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
@@ -120,7 +119,7 @@
       </video>
     </div>
 
-    <!-- Sağ GIF -->
+    <!-- Sağ 2 GIF -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
       <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
       <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
