--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
     </a>
     <a href="https://x.com/YOUR_X" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X">
+      <img src="X png.png" alt="X">
     </a>
     <a href="https://dexscreener.com" target="_blank">
       <img src="https://assets.dexscreener.com/icons/apple-touch-icon.png" alt="Dexscreener">
