--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       <img src="X png.png" alt="X">
     </a>
     <a href="https://dexscreener.com" target="_blank">
-      <img src="https://assets.dexscreener.com/icons/apple-touch-icon.png" alt="Dexscreener">
+      <img src="Dex png.png" alt="Dexscreener">
     </a>
     <a href="https://coingecko.com" target="_blank">
-      <img src="https://www.coingecko.com/assets/coingecko-logo-6b4dfec63db6dca76831b6b78f530dabd0b65d7feba09a053c87a7ebc9441b5c.png" alt="CoinGecko">
+      <img src="gecko png.png" alt="CoinGecko">
     </a>
   </div>
 
