--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     /* İKON BAR */
     #iconBar {
       position: fixed;
-      top: 20px;
-      right: 30px;
-      display: flex;
+      top: 40px;
+      right: 40px;
+      display: fixed;
       gap: 24px;
       z-index: 999;
     }
