--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       width: 240px;
     }
 
-    /* İKON BAR */
-    <body>#iconBar {
+    <body><div id="iconBar">
+    #iconBar {
       position: fixed;
       top: 20px;
       right: 30px;
