--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       width: 240px;
     }
 
-    <body><div id="iconBar">
-    #iconBar {
+    <div id="iconBar">
+    <body>#iconBar {
       position: fixed;
       top: 20px;
       right: 30px;
