--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- SABİT İKON BAR -->
   <div id="iconBar">
     <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
-      <img src="images/telegram.png" alt="Telegram">
+      <img src="Telegram png.png" alt="Telegram">
     </a>
     <a href="https://x.com/YOUR_X" target="_blank">
       <img src="X png.png" alt="X">
