--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       width: 240px;
     }
 
-    /* SABİT İKON BAR */
+    <body>
     #iconBar {
       position: fixed;
       top: 20px;
@@ -72,8 +72,6 @@
 </head>
 
 <body>
-
-  <!-- SABİT İKON BAR -->
   <div id="iconBar">
     <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
       <img src="Telegrampng.png" alt="Telegram">
