--- a/logo-test.html
+++ b/logo-test.html
@@ -3,25 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Logo Test - SABİT HALİ</title>
+  <title>Logo Test</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       height: 200vh;
       background: linear-gradient(to bottom right, #fff0f5, #e0f7ff);
     }
 
-    /* Sabit Logo Barı */
     #iconBar {
       position: fixed;
       top: 20px;
-      right: 20px;
+      right: 30px;
       display: flex;
-      gap: 16px;
-      background-color: rgba(255,255,255,0.3);
+      gap: 20px;
+      background: rgba(255, 255, 255, 0.3);
       backdrop-filter: blur(5px);
-      padding: 10px 15px;
+      padding: 10px 20px;
       border-radius: 20px;
       z-index: 9999;
     }
@@ -29,8 +27,7 @@
     #iconBar img {
       width: 42px;
       height: 42px;
-      border-radius: 10px;
-      box-shadow: 0 0 6px rgba(0,0,0,0.2);
+      border-radius: 8px;
       transition: transform 0.3s ease;
     }
 
@@ -39,20 +36,18 @@
     }
   </style>
 </head>
-
 <body>
 
-  <!-- SABİT ICON BAR -->
   <div id="iconBar">
     <a href="#"><img src="Telegrampng.png" alt="Telegram"></a>
     <a href="#"><img src="Xpng.png" alt="X"></a>
     <a href="#"><img src="Dexpng.png" alt="Dex"></a>
-    <a href="#"><img src="geckopng3.webp" alt="CoinGecko"></a>
+    <a href="#"><img src="geckopng3.webp" alt="Gecko"></a>
   </div>
 
-  <div style="padding: 150px;">
-    <h1>Scroll et bakalım logolar yerinde mi kalıyor? 😼</h1>
-    <p style="margin-top: 800px;">Sayfa sonu test noktası 🧪</p>
+  <div style="padding-top: 200px; text-align: center;">
+    <h1>Scroll et, logolar yukarda sabit duruyor mu?</h1>
+    <p>Logo sabitlenmezse başka bir şey bozuyor demektir.</p>
   </div>
 
 </body>
